possible fix for weird scaling on mobile??

--- a/app.css
+++ b/app.css
@@ -142,8 +142,8 @@ body {
     border: 2px solid var(--accent);
     content: "";
     display: block;
-    width: 100%;
-    height: 100%;
+    width: 24px;
+    height: 24px;
     transition: all .2s;
     position: relative;
 }
